--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-openvpn (1.1) stable; urgency=medium
+
+  * Remove all configuration files when purging the plugin. 
+
+ -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Sun, 26 Apr 2015 16:20:03 +0200
+
 openmediavault-openvpn (1.0.13) stable; urgency=low
 
   * Add custom debian/control field XB-Plugin-Section
