--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-openvpn (1.2) stable; urgency=medium
+
+  * Fix compatability with Docker plugin
+
+ -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Tue, 25 Oct 2015 01:50 -0500
+
 openmediavault-openvpn (1.1) stable; urgency=medium
 
   * Remove all configuration files when purging the plugin. 
