--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,10 @@
 openmediavault-openvpn (1.2) stable; urgency=medium
 
-  * Fix compatability with Docker plugin
-
- -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Tue, 25 Oct 2015 01:50 -0500
+  * Added certificate authority creation
+  * Added server certificate creation
+  * Added additional fields for certificates
+ 
+ -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Thu, 31 Dec 2015 11:30:00 -0500
 
 openmediavault-openvpn (1.1) stable; urgency=medium
 
