--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-openvpn (3.0.3) stable; urgency=medium
+
+  * OMV 3.0.40 compatibility.
+
+ -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Tue, 27 Sep 2016 20:35:56 +0200
+
 openmediavault-openvpn (3.0.2) stable; urgency=medium
 
   * OMV 3.0.21 compatibility. 
