--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,12 @@
+openmediavault-openvpn (3.0.5) stable; urgency=medium
+
+  * The interface used for the iptables rules is now selectable. 
+
+ -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Sat, 10 Dec 2016 14:52:13 +0100
+
 openmediavault-openvpn (3.0.4) stable; urgency=low
 
-  * Fix create group bug
+  * Fix create group bug.
 
  -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Fri, 11 Nov 2016 10:23:25 -0600
 
